--- a/ConnectLawyers.csproj
+++ b/ConnectLawyers.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>2230674f-e3eb-4ab9-99b8-1fde7dfe3e07</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
